--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="stylesheets/styles.css"/>
 </head>
 <body>
+    <div class="canvas">
+        <canvas id="canvas"></canvas>
+        <h2>SASS<br/>RULES!!!</h2>
+    </div>
+  
    <nav data-ng-controller="NavCtrl">
        <ul>
            <li><a ui-sref-active="active" ui-sref="intro" title="Intro"></a></li>
@@ -41,7 +46,8 @@
     
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="js/fireworks.js"></script>
+   
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular/angular-animate.js"></script>
     <script src="bower_components/angular/animate.js"></script>
